[project]
name = "bitwarden-py"
version = "0.1.0"
description = "Python wrapper for the Bitwarden CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "SpaceShaman", email = "spaceshaman@tuta.io" }]
keywords = ["bitwarden"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/SpaceShaman/bitwarden-py"
Homepage = "https://github.com/SpaceShaman/bitwarden-py"
Repository = "https://github.com/SpaceShaman/bitwarden-py"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "python-dotenv>=1.2.2",
]
