[project]
name = "bitwarden-py"
version = "0.4.0"
description = "A Python wrapper for the Bitwarden CLI — programmatically manage your Bitwarden vault: create, read, edit and delete items, folders, collections, attachments, and more."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SpaceShaman", email = "spaceshaman@tuta.io" }]
keywords = ["bitwarden", "bitwarden-cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/SpaceShaman/bitwarden-py"
Homepage = "https://github.com/SpaceShaman/bitwarden-py"
Repository = "https://github.com/SpaceShaman/bitwarden-py"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
